# voting-app

./: .gitignore  package-lock.json  package.json
contract/: Cargo.toml
contract/src/: lib.rs
frontend/: App.js  index.html  index.js
frontend/assets/constants/: colors.js
frontend/assets/css/: global.css
frontend/assets/js/near/: config.js  utils.js
frontend/components/: Button.js  Input.js  Modal.js  Option.js  Poll.js
frontend/functions/: getPollsWithStatus.js
frontend/pages/: AllPolls.js  CreatePoll.js  Main.js  Modal.js  MyPolls.js  NotFound.js  Poll.js  VotedPolls.js
